modified some commands and added new random poll question, also replaced scanner because it randomly fucking broke